adding playwright as dependancy

--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,8 @@ client/src/components/Donation/types.js
 
 ### UI Components ###
 tools/ui-components/dist
+/test-results/
+/playwright-report/
+/playwright/.cache/
+
+tests-examples/
