--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "tools/challenge-auditor/index.ts",
     "tools/challenge-editor/**/*",
     "tools/challenge-helper-scripts/**/*.ts",
-    "tools/scripts/**/*.ts"
+    "tools/scripts/**/*.ts",
+    "./playwright.config.ts"
   ],
   "extends": "./tsconfig-base.json"
 }
