--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,7 +73,8 @@
           "./utils/tsconfig.json",
           "./web/tsconfig.json",
           "./curriculum-server/tsconfig.json",
-          "./cypress/tsconfig.json"
+          "./cypress/tsconfig.json",
+          "./playwright/tsconfig.json"
         ]
       },
       "extends": [
