--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@babel/preset-env": "7.22.9",
     "@babel/preset-react": "7.22.5",
     "@babel/preset-typescript": "7.22.5",
+    "@playwright/test": "^1.36.2",
     "@testing-library/cypress": "8.0.7",
     "@testing-library/dom": "8.20.1",
     "@testing-library/jest-dom": "5.17.0",
