feat(playwright-e2e): playwright e2e tests for /donate page

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,6 @@ client/src/components/Donation/types.js
 
 ### UI Components ###
 tools/ui-components/dist
+/test-results/
+/playwright-report/
+/playwright/.cache/
