feat(e2e): fixing github action for playwright run

--- a/.github/workflows/e2e-playwright.yml
+++ b/.github/workflows/e2e-playwright.yml
@@ -130,18 +130,17 @@ jobs:
       - name: Install pm2
         run: npm i -g pm2
 
-      - name: run server
-        run: pnpm run start-ci
-        continue-on-error: true
-
       - name: Install playwright dependencies and run
         run: |
           cd ./e2e 
           npm i  
           npx playwright install  
           npx playwright install-deps
+          cd ..
 
       - name: Run playwright tests
         run: |
+          pnpm run start-ci &
+          sleep 10
           cd ./e2e 
           npx playwright test
