--- a/.github/workflows/e2e-playwright.yml
+++ b/.github/workflows/e2e-playwright.yml
@@ -74,6 +74,8 @@ jobs:
     needs: build-client
     strategy:
       fail-fast: false
+      matrix:
+        browsers: [chromium, firefox, webkit]
 
     services:
       mongodb:
@@ -143,4 +145,4 @@ jobs:
           pnpm run start-ci &
           sleep 10
           cd ./e2e 
-          npx playwright test
+          npx playwright test --project=${{ matrix.browsers }}
